# Barter-Click-Fix-NG-

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: PCH.h  main.cpp
